# parspec-assignment-2

./: .gitignore  ANSWERS.md  LICENSE  README.md  app.py  preprocess_and_train.ipynb  pyproject.toml
models/: labels.pkl  product_classifier_model.pkl  tfidf_vectorizer.pkl
