[project]
name = "parspec-assignment-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fitz>=0.0.1.dev2",
    "gradio>=5.3.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "notebook>=7.3.1",
    "openpyxl>=3.1.5",
    "pymupdf>=1.25.0",
    "requests>=2.32.3",
    "scikit-learn>=1.5.2",
]
